--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/forget_password_email_RelativeLayout"
-        android:visibility="gone"
+        android:visibility="visible"
         >
         
         <ImageView
@@ -77,6 +77,7 @@
             android:hint="Mobile Number"
             android:textColorHint="#ffffff"
             android:textColor="#ffffff"
+            android:inputType="number"
             android:textSize="@dimen/_14sdp"
             android:paddingStart="@dimen/_15sdp"
             android:singleLine="true"/>
@@ -103,7 +104,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Forget_Password_OTP_RelativeLayout"
-        android:visibility="visible"
+        android:visibility="gone"
         >
 
         <TextView
@@ -129,7 +130,7 @@
             android:singleLine="true"
             android:layout_marginTop="@dimen/_19sdp"
             android:fontFamily="@font/ibarra_real_nova"
-            android:text="Enter the OTP Send To +919032757020"
+            android:text="Enter the OTP Send To +91"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="@dimen/_15sdp" />
@@ -172,6 +173,7 @@
             android:id="@+id/txt_re_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:layout_below="@+id/tv_resend_otp_timer_forgetpassword"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_toEndOf="@id/txt_dont_receive_code"
