--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.AppCompat.DayNight" parent="Theme.AppCompat.Light" />
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+
+    </style>
+
+
+
 </resources>
