--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,21 +14,21 @@
         android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_15sdp"
+        android:drawableEnd="@drawable/round_search_24"
+        android:paddingEnd="@dimen/_5sdp"
         android:id="@+id/Search"
         android:hint="Search"
         android:paddingStart="@dimen/_15sdp"/>
 
-    <com.skydoves.powerspinner.PowerSpinnerView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/Search"
-        android:layout_marginStart="@dimen/_23sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:drawableStart="@drawable/baseline_location_on_24"
         android:layout_marginEnd="@dimen/_23sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:background="@color/Secondary_less"
         app:spinner_arrow_tint="@color/black"
-        android:paddingEnd="@dimen/_5sdp"
-        android:paddingStart="@dimen/_8sdp"
         android:hint="Deliver to Paradox - Hyderabad 500065"
         android:gravity="center_vertical"
         android:textColor="@color/black"
