--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,6 +45,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:shimmer_demo_layout="@layout/homepage_category_recycle_view_loading"
         tools:itemCount="10"
+        app:shimmer_demo_child_count="10"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/HomeCategoryRecyclerview"
