--- a/app/src/main/res/layout/homepage_category_recycle_view.xml
+++ b/app/src/main/res/layout/homepage_category_recycle_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="@dimen/_60sdp"
+    android:layout_height="@dimen/_80sdp"
     android:layout_centerInParent="true"
     android:layout_margin="@dimen/_5sdp"
     >
@@ -16,11 +16,18 @@
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Plastic"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/Products_Image_View"
         android:textColor="@color/black"
-        android:id="@+id/Products_Text_View"/>
+        android:id="@+id/Products_Text_View"
+        android:textAlignment="center"
+        android:singleLine="true"
+        android:ellipsize = "marquee"
+        android:fadingEdge = "horizontal"
+        android:marqueeRepeatLimit = "marquee_forever"
+        android:scrollHorizontally = "true"/>
+
 </RelativeLayout>
