--- a/app/src/main/res/layout/homepage_category_recycle_view_loading.xml
+++ b/app/src/main/res/layout/homepage_category_recycle_view_loading.xml
@@ -11,7 +11,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_60sdp"
-        android:src="@color/dropsy_medium_gray"
+        android:src="@color/Grey"
         android:id="@+id/Products_Image_View_Loading"
         />
 
@@ -19,7 +19,7 @@
         android:layout_width="@dimen/_50sdp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@color/dropsy_medium_gray"
+        android:background="@color/Grey"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_below="@id/Products_Image_View_Loading"
         android:textColor="@color/black"/>
