--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,14 @@
 <resources>
 
 
+    <style name="PowerSpinnerStyle">
+        <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
+        <item name="android:scrollbars">vertical</item>
+        <item name="android:fadeScrollbars">false</item>
+        <item name="android:scrollbarSize">2dp</item>
+        <item name="android:scrollbarThumbVertical">@drawable/powerspinner_scrollbar</item>
+    </style>
+
     <style name="circleImageViewStyle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">40%</item>
