--- a/app/src/main/res/layout/cartlistlayout.xml
+++ b/app/src/main/res/layout/cartlistlayout.xml
@@ -23,6 +23,7 @@
         android:layout_height="@dimen/_65sdp"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/_5sdp"
+        android:src="@drawable/baseline_circle_24"
         android:id="@+id/CartProductImage"
         />
 
