--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,17 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.ui.cart.CartFragment"
+        android:background="@drawable/cartbackground"
         >
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/card_back_btn"
-            android:layout_width="@dimen/_36sdp"
-            android:layout_height="@dimen/_26sdp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/_3sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:background="@drawable/baseline_arrow_back_24" />
 
         <RelativeLayout
             android:id="@+id/cart_RelativeLayout"
