--- a/app/src/main/res/layout/homepage_category_recycle_view.xml
+++ b/app/src/main/res/layout/homepage_category_recycle_view.xml
@@ -5,6 +5,9 @@
     android:layout_height="@dimen/_80sdp"
     android:layout_centerInParent="true"
     android:layout_margin="@dimen/_5sdp"
+    android:background="?android:selectableItemBackgroundBorderless"
+    android:clickable="true"
+    android:focusable="true"
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -13,6 +16,7 @@
         android:layout_height="@dimen/_60sdp"
         android:src="@drawable/platic_glass"
         android:id="@+id/Products_Image_View"
+
         />
 
     <TextView
