--- a/app/src/main/res/layout/activity_my_addresses.xml
+++ b/app/src/main/res/layout/activity_my_addresses.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/frogetpassword_page_background"
     tools:context=".ui.ui.myaddress.MyAddresses">
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_new_address"
@@ -15,7 +15,12 @@
         android:text="Add a new Address"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_10sdp"
+        android:padding="@dimen/_10sdp"
+        android:drawableEnd="@drawable/my_address_vector"
+        android:drawablePadding="@dimen/_10sdp"
         android:layout_below="@+id/txt_personal_address"
+        android:background="@drawable/custom_edit_text"
+        android:backgroundTint="@color/Secondary_less"
         />
 
     <TextView
@@ -25,13 +30,13 @@
         android:text="Your Address"
         android:layout_marginStart="@dimen/_10sdp"
         android:singleLine="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_10sdp"
         android:fontFamily="@font/coda"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/_28sdp"
         />
-
 
     <com.cooltechworks.views.shimmer.ShimmerRecyclerView
         android:id="@+id/myAddresses_personal_address_recyclerview_List"
@@ -40,13 +45,5 @@
         android:layout_below="@+id/btn_add_new_address"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/personal_myaddress_layout" />
-
-
-
-
-
-
-
-
 
 </RelativeLayout>
