--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -15,6 +15,23 @@
         android:visibility="visible"
         >
 
+        <TextView
+            android:id="@+id/txt_removeall"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/coda"
+            android:text="Remove All"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16sdp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="@dimen/_200sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            />
+
+
+
         <ImageView
             android:id="@+id/image_view_carticon"
             android:layout_width="@dimen/_50sdp"
