--- a/app/src/main/res/layout/personal_myaddress_layout.xml
+++ b/app/src/main/res/layout/personal_myaddress_layout.xml
@@ -9,12 +9,11 @@
     android:padding="@dimen/_10sdp"
     >
 
-
     <TextView
-        android:id="@+id/txt_personal_my_address"
+        android:id="@+id/myAddresses_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="king Stroman"
+        android:text="Example Name"
         android:layout_marginStart="@dimen/_10sdp"
         android:singleLine="true"
         android:layout_marginTop="@dimen/_10sdp"
@@ -24,113 +23,17 @@
         android:textSize="@dimen/_20sdp"
         />
 
-
     <TextView
-        android:id="@+id/txt_personal_my_address_hno"
+        android:id="@+id/txt_personal_my_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="20-5-154-to150"
         android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
         android:layout_marginTop="@dimen/_10sdp"
         android:fontFamily="@font/coda"
-        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address"
-        />
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_street"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Shali banda roopal bazzar"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_hno"
-        />
-
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_city"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HYDERABAD, TELANGANA 500065"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_street"
-        />
-
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_country"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="India"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_city"
-        />
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phone Number : +91-9032757020"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_country"
-        />
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_add_delivert_instructions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Delivery instructions"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_phone_number"
-        />
-
-
-    <TextView
-        android:id="@+id/txt_personal_my_address_update_delivery_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Update delivery location"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:singleLine="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/coda"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:layout_below="@+id/txt_personal_my_address_add_delivert_instructions"
+        android:layout_below="@+id/myAddresses_Name"
         />
 
 
@@ -147,18 +50,4 @@
         android:background="@drawable/button_bg_curve"
         android:backgroundTint="#E656AEFF"
         />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </RelativeLayout>
